# Tush_careers-v2

./: .replit  LICENSE  app.py  pyproject.toml
templates/: application_submitted.html  bootstrap.html  jobpage.html
