[tool.poetry]
name = "repl-nix-tushcareers"
version = "0.1.0"
description = ""
authors = ["Tuwei <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_tushcareers-v2"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
